AcuOrgUtil/src/objects/ACMN_Error_Log_PE__e.object
<CustomObject>
    <description>Creates an error log record based on parameters entered</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Log_Date_Time__c</fullName>
        <label>Log Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Details__c</fullName>
        <label>Other Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Running_User_ID__c</fullName>
        <description>Salesforce ID of the running user that triggered the error.</description>
        <label>Running User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTraceString__c</fullName>
        <label>Stacktrace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>ACMN Error Log</label>
    <pluralLabel>ACMN Error Logs</pluralLabel>
</CustomObject>